# hackathon-II-All-Phases-

Phase 2/: .gitignore  CLAUDE.md  README.md  requirements.txt
Phase 2/backend/: pyproject.toml  requirements.txt  setup.py  todo_app.db
Phase 2/backend/src/: main.py
Phase 2/backend/src/api/: auth.py  deps.py  todos.py
Phase 2/backend/src/core/: security.py
Phase 2/backend/src/database/: session.py
Phase 2/backend/src/models/: auth.py  todo.py
Phase 2/backend/src/services/: auth.py
Phase 2/backend/tests/: conftest.py
Phase 2/backend/tests/auth/: test_auth.py  test_jwt.py
Phase 2/backend/tests/todos/: test_todos.py
Phase 2/backend/tests/unit/: test_security.py
Phase 2/frontend_app/: package.json
Todo-cli/: README.md  pyproject.toml  test_app.py
Todo-cli/.claude/: settings.local.json
Todo-cli/.specify/memory/: constitution.md
Todo-cli/.specify/templates/: plan-template.md  tasks-template.md
Todo-cli/history/prompts/001-todo-console-app/: 1-create-todo-console-app-plan.plan.prompt.md  1-create-todo-console-app-spec.spec.prompt.md  1-create-todo-console-app-tasks.tasks.prompt.md  1-implement-todo-console-app.green.prompt.md
Todo-cli/history/prompts/constitution/: 1-amend-project-constitution.constitution.prompt.md
Todo-cli/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Todo-cli/specs/001-todo-console-app/checklists/: requirements.md
Todo-cli/specs/001-todo-console-app/contracts/: todo-api-contract.md
Todo-cli/src/: data.py  main.py  operations.py  ui.py  utils.py
(+46 files in other folders)
