[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools"

[project]
name = "todo-console-app"
version = "0.1.0"
description = "A console-based todo application with in-memory storage"
authors = [{name = "Developer", email = "developer@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

[project.scripts]
todo-app = "src.main:main"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["src"]
known_third_party = []